...
                     .addDisposableTo(disposeBag)
        }

    }
    
    func setupAccessibilityIdentifiers() {
        tableView.accessibilityIdentifier = "RepositoriesListTableView"
        navigationItem.leftBarButtonItem?.accessibilityIdentifier = "InfoButton"
    }
    
}


