...
        tableView.trailingAnchor.constraint(equalTo: view.trailingAnchor).isActive = true
        tableView.topAnchor.constraint(equalTo: view.topAnchor).isActive = true
        tableView.bottomAnchor.constraint(equalTo: view.bottomAnchor).isActive = true
    }
    
    func setupAccessibilityIdentifiers() {
        tableView.accessibilityIdentifier = "InfoTableView"
        self.navigationItem.rightBarButtonItem?.accessibilityIdentifier = "InfoDoneButton"
    }
    
}

extension InfoViewController : Closable { }

